Fixed overflow issues with home page

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -26,6 +26,10 @@
   }
 }
 
+.homePage {
+  overflow-x: hidden;
+}
+
 .aboutUs {
   padding-block: 3rem;
 
